hability to run, uberjar and jvm gc choice