@@ -5,8 +5,11 @@
                   [redis-clojure "1.2.6-alpha4"] 
                   [ring/ring-core "0.3.5"] 
                   [ring/ring-jetty-adapter "0.3.5" ]
+;;                [aleph "0.1.5-SNAPSHOT"] 
                   [compojure "0.5.3"]]
   :dev-dependencies [[com.stuartsierra/lazytest "2.0.0-SNAPSHOT"]] 
+  :main shorten.core
+  :jvm-opts ["-XX:+UseConcMarkSweepGC" "-server"] 
   :repositories {"central"  "http://repo1.maven.org/maven2/" 
                  "stuartsierra.com snapshots" "http://stuartsierra.com/m2snapshots/"
                  "stuartsierra.com" "http://stuartsierra.com/maven2"})
